[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/hyh.cutscene_graph/scenes/EditorGraphNodeBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/hyh.cutscene_graph/scripts/EditorSetNode.gd" type="Script" id=2]


[node name="EditorSetNode" instance=ExtResource( 1 )]
margin_bottom = 137.0
title = "Set Variable"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.949219, 0.274384, 0.479997, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.813103, 0.957031, 0.299072, 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]
margin_left = 16.0
margin_top = 24.0
margin_right = 288.0
margin_bottom = 132.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 262.0
margin_bottom = 98.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="Label3" type="Label" parent="MarginContainer/GridContainer" index="0"]
margin_top = 3.0
margin_right = 55.0
margin_bottom = 17.0
text = "Scope:"

[node name="ScopeSelect" type="OptionButton" parent="MarginContainer/GridContainer" index="1"]
margin_left = 65.0
margin_right = 252.0
margin_bottom = 20.0
toggle_mode = false
text = "Dialogue"
items = [ "Dialogue", null, false, 0, null, "Scene", null, false, 1, null, "Global", null, false, 2, null ]
selected = 0

[node name="Label" type="Label" parent="MarginContainer/GridContainer" index="2"]
margin_top = 35.0
margin_right = 55.0
margin_bottom = 49.0
text = "Variable:"

[node name="VariableEdit" type="LineEdit" parent="MarginContainer/GridContainer" index="3"]
margin_left = 65.0
margin_top = 30.0
margin_right = 252.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/GridContainer" index="4"]
margin_top = 69.0
margin_right = 55.0
margin_bottom = 83.0
text = "Value:"

[node name="ValueEdit" type="LineEdit" parent="MarginContainer/GridContainer" index="5"]
margin_left = 65.0
margin_top = 64.0
margin_right = 252.0
margin_bottom = 88.0
size_flags_horizontal = 3
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="item_selected" from="MarginContainer/GridContainer/ScopeSelect" to="." method="_on_ScopeSelect_item_selected"]
[connection signal="text_changed" from="MarginContainer/GridContainer/VariableEdit" to="." method="_on_VariableEdit_text_changed"]
[connection signal="text_changed" from="MarginContainer/GridContainer/ValueEdit" to="." method="_on_ValueEdit_text_changed"]
